<resources>
    <string name="app_name">Microage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_content_description_title_graphic">Title graphic</string>
    <string name="home_content_description_mission_button">mission button</string>
    <string name="home_content_description_mission_badge_button">mission badge button</string>
    <string name="home_content_description_ask_an_astronaut_button">ask an astronaut button</string>
    <string name="home_content_description_meet_the_team_button">meet the team button</string>
    <string name="home_content_description_mission_updates_button">mission updates button</string>
    <string name="team_member_title_academic">Academic Interest</string>
    <string name="team_member_title_lab">Most Fun in the Lab</string>
    <string name="team_member_title_planet">Favourite Planet</string>
    <string name="team_member_title_planet_dwarf">Favourite (Dwarf) Planet</string>
    <string name="team_member_title_fact">Fun Fact</string>
    <string name="team_member_content_desc">Team Member Portrait</string>
    <string name="team_member_others">Miss Sofia Callow\n\nMiss Jessica Dullehan\n\nMiss Sophie Ellie\n\nMiss Jade Warren\n\nThe University of Liverpool Mobile UI Team</string>
    <string name="astronaut_coming_soon">Coming soon…</string>
    <string name="badge_upload_button_content_desc">Upload badge</string>

</resources>